feat(ui,session): show real‑time “Online Users” list in every client